<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/background_dark"
    android:gravity="center"
    android:orientation="vertical" >

    <Button
        android:id="@+id/button"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:onClick="forwardZoom"
        android:text="@string/forwardZoom"
        android:textAppearance="?android:attr/textAppearanceMediumInverse" />

    <Button
        android:id="@+id/button2"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:onClick="left"
        android:text="@string/left"
        android:textAppearance="?android:attr/textAppearanceMediumInverse" />

    <Button
        android:id="@+id/button3"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:onClick="fade"
        android:text="@string/fade"
        android:textAppearance="?android:attr/textAppearanceMediumInverse" />

    <Button
        android:id="@+id/button4"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:onClick="byDefault"
        android:text="@string/bydefault"
        android:textAppearance="?android:attr/textAppearanceMediumInverse" />

</LinearLayout>